# mcp-tool

./: .env.example  chat_handler.py  config.py  environment.py  license.md  llm_client.py  main.py  pyproject.toml  server_config.json  system_prompt_generator.py  test.py  tools_handler.py
messages/: json_rpc_message.py  ping.py  prompts.py  resources.py  send_initialize_message.py  send_message.py  tools.py
sample_messages/: initialize_request.json  initialize_response.json
transport/stdio/: stdio_client.py  stdio_server_shutdown.py
